--- a/BlazorClient/_Imports.razor
+++ b/BlazorClient/_Imports.razor
@@ -11,3 +11,4 @@
 @using BlazorClient.Services
 @using BlazorClient.Models
 @using BlazorClient.Components
+@using System.ComponentModel.DataAnnotations
